<resources>
    <string name="app_name">P8</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="selectImg">seleccionar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SeleccionarDificultad">Seleccione Dificultad</string>
    <string name="clickPieces">Seleccione una pieza para cambiarla de posición</string>
    <string name="congrats">¡Felicidades!</string>
    <string name="puzzle_completed">Tu puntuación es de:</string>
    <string name="new_puzzle">Otra vez</string>
    <string name="menu_ayuda">Ayuda</string>
</resources>