<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.manytiles.p8.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.manytiles.p8.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.manytiles.p8.ui.slideshow.AyudaFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/ayuda_fragment" />
    <fragment
        android:id="@+id/nav_selectimg"
        android:name="com.manytiles.p8.ui.SelectImgFragment"
        android:label="@string/selectImg"
        tools:layout="@layout/ayuda_fragment" >
        <action
            android:id="@+id/action_nav_selectimg_to_nav_SeleccionarDificultad"
            app:destination="@id/nav_SeleccionarDificultad" />
    </fragment>
    <fragment
        android:id="@+id/nav_SeleccionarDificultad"
        android:name="com.manytiles.p8.ui.SeleccionarDificultadFragment"
        android:label="@string/SeleccionarDificultad"
        tools:layout="@layout/fragment_seleccionar_dificultad" >
        <action
            android:id="@+id/action_nav_SeleccionarDificultad_to_puzzleFragment"
            app:destination="@id/puzzleFragment" />
    </fragment>
    <fragment
        android:id="@+id/puzzleFragment"
        android:name="com.manytiles.p8.ui.PuzzleFragment"
        android:label="fragment_puzzle"
        tools:layout="@layout/fragment_puzzle" />
</navigation>